add code product list

--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "first-lesson": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "first-lesson"
+    }
+  },
+  "defaultProject": "first-lesson",
+  "cli": {
+    "analytics": "bdc5f558-786a-47ec-a07e-6089fcb42371"
+  }
 }
